OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/nviz.py


# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 160
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_new_light'):
        Nviz_new_light = _lib.Nviz_new_light
        Nviz_new_light.restype = c_int
        Nviz_new_light.argtypes = [POINTER(nv_data)]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 163
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_new_map_obj'):
        Nviz_new_map_obj = _lib.Nviz_new_map_obj
        Nviz_new_map_obj.restype = c_int
        Nviz_new_map_obj.argtypes = [c_int, String, c_double, POINTER(nv_data)]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 164
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_set_attr'):
        Nviz_set_attr = _lib.Nviz_set_attr
        Nviz_set_attr.restype = c_int
        Nviz_set_attr.argtypes = [c_int, c_int, c_int, c_int, String, c_double, POINTER(nv_data)]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 165
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_set_surface_attr_default'):
        Nviz_set_surface_attr_default = _lib.Nviz_set_surface_attr_default
        Nviz_set_surface_attr_default.restype = None
        Nviz_set_surface_attr_default.argtypes = []
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 166
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_set_vpoint_attr_default'):
        Nviz_set_vpoint_attr_default = _lib.Nviz_set_vpoint_attr_default
        Nviz_set_vpoint_attr_default.restype = c_int
        Nviz_set_vpoint_attr_default.argtypes = []
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 167
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_set_volume_attr_default'):
        Nviz_set_volume_attr_default = _lib.Nviz_set_volume_attr_default
        Nviz_set_volume_attr_default.restype = c_int
        Nviz_set_volume_attr_default.argtypes = []
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 168
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_unset_attr'):
        Nviz_unset_attr = _lib.Nviz_unset_attr
        Nviz_unset_attr.restype = c_int
        Nviz_unset_attr.argtypes = [c_int, c_int, c_int]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 171
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_init_data'):
        Nviz_init_data = _lib.Nviz_init_data
        Nviz_init_data.restype = None
        Nviz_init_data.argtypes = [POINTER(nv_data)]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 172
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_destroy_data'):
        Nviz_destroy_data = _lib.Nviz_destroy_data
        Nviz_destroy_data.restype = None
        Nviz_destroy_data.argtypes = [POINTER(nv_data)]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 173
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_set_bgcolor'):
        Nviz_set_bgcolor = _lib.Nviz_set_bgcolor
        Nviz_set_bgcolor.restype = None
        Nviz_set_bgcolor.argtypes = [POINTER(nv_data), c_int]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 174
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_get_bgcolor'):
        Nviz_get_bgcolor = _lib.Nviz_get_bgcolor
        Nviz_get_bgcolor.restype = c_int
        Nviz_get_bgcolor.argtypes = [POINTER(nv_data)]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 175
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_color_from_str'):
        Nviz_color_from_str = _lib.Nviz_color_from_str
        Nviz_color_from_str.restype = c_int
        Nviz_color_from_str.argtypes = [String]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 176
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_new_fringe'):
        Nviz_new_fringe = _lib.Nviz_new_fringe
        Nviz_new_fringe.restype = POINTER(struct_fringe_data)
        Nviz_new_fringe.argtypes = [POINTER(nv_data), c_int, c_ulong, c_double, c_int, c_int, c_int, c_int]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 178
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_set_fringe'):
        Nviz_set_fringe = _lib.Nviz_set_fringe
        Nviz_set_fringe.restype = POINTER(struct_fringe_data)
        Nviz_set_fringe.argtypes = [POINTER(nv_data), c_int, c_ulong, c_double, c_int, c_int, c_int, c_int]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 182
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_init_view'):
        Nviz_init_view = _lib.Nviz_init_view
        Nviz_init_view.restype = None
        Nviz_init_view.argtypes = [POINTER(nv_data)]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 183
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_set_focus_state'):
        Nviz_set_focus_state = _lib.Nviz_set_focus_state
        Nviz_set_focus_state.restype = c_int
        Nviz_set_focus_state.argtypes = [c_int]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 184
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_set_focus_map'):
        Nviz_set_focus_map = _lib.Nviz_set_focus_map
        Nviz_set_focus_map.restype = c_int
        Nviz_set_focus_map.argtypes = [c_int, c_int]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 187
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_new_render_window'):
        Nviz_new_render_window = _lib.Nviz_new_render_window
        Nviz_new_render_window.restype = POINTER(struct_render_window)
        Nviz_new_render_window.argtypes = []
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 188
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_init_render_window'):
        Nviz_init_render_window = _lib.Nviz_init_render_window
        Nviz_init_render_window.restype = None
        Nviz_init_render_window.argtypes = [POINTER(struct_render_window)]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 189
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_destroy_render_window'):
        Nviz_destroy_render_window = _lib.Nviz_destroy_render_window
        Nviz_destroy_render_window.restype = None
        Nviz_destroy_render_window.argtypes = [POINTER(struct_render_window)]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 190
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_create_render_window'):
        Nviz_create_render_window = _lib.Nviz_create_render_window
        Nviz_create_render_window.restype = c_int
        Nviz_create_render_window.argtypes = [POINTER(struct_render_window), POINTER(None), c_int, c_int]
        break

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 191
for _lib in _libs.values():
    if hasattr(_lib, 'Nviz_make_current_render_window'):
        Nviz_make_current_render_window = _lib.Nviz_make_current_render_window
        Nviz_make_current_render_window.restype = c_int
        Nviz_make_current_render_window.argtypes = [POINTER(struct_render_window)]
        break

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gsurf.h: 20
try:
    GS_UNIT_SIZE = 1000.0
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 39
try:
    MAP_OBJ_UNDEFINED = 0
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 39
try:
    MAP_OBJ_SURF = 1
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 39
try:
    MAP_OBJ_VOL = 2
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 39
try:
    MAP_OBJ_VECT = 3
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 39
try:
    MAP_OBJ_SITE = 4
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 40
try:
    DRAW_COARSE = 0
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 40
try:
    DRAW_FINE = 1
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 40
try:
    DRAW_BOTH = 2
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 42
try:
    DRAW_QUICK_SURFACE = 1
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 42
try:
    DRAW_QUICK_VLINES = 2
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 42
try:
    DRAW_QUICK_VPOINTS = 4
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 42
try:
    DRAW_QUICK_VOLUME = 8
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 43
try:
    RANGE = (5 * GS_UNIT_SIZE)
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 43
try:
    RANGE_OFFSET = (2 * GS_UNIT_SIZE)
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 43
try:
    ZRANGE = (3 * GS_UNIT_SIZE)
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 43
try:
    ZRANGE_OFFSET = (1 * GS_UNIT_SIZE)
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 44
try:
    DEFAULT_SURF_COLOR = 3390463
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 45
try:
    RED_MASK = 255
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 45
try:
    GRN_MASK = 65280
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 45
try:
    BLU_MASK = 16711680
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 46
try:
    FORMAT_PPM = 1
except:
    pass

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 46
try:
    FORMAT_TIF = 2
except:
    pass

fringe_data = struct_fringe_data # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 79

render_window = struct_render_window # c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\nviz.h: 110

# No inserted files

